// proto/greet.proto

// for syntax highlighting we use proto3 version
syntax = "proto3";          // ← add spaces around =

// path to our current folder, where the generated files will be placed
option go_package = "./proto";   // OK for a demo; usually you’d put your module path

// package name for our proto file
package greet_service;

// defining all the Services for the gRPC
service GreetService {
  // simple RPC
    rpc SayHello(NoParam)                     returns (HelloResponse);
  // server streaming RPC
    rpc SayHelloServerStreaming(NamesList)    returns (stream HelloResponse);
  // client streaming RPC
    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessagesList);
  // bidirectional streaming RPC
    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

// NoParam acts as a type for “no parameters”.
message NoParam {}          // ← remove the trailing semicolon

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message NamesList {
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}
